# music_player

./: README.md  db.sqlite3  pyproject.toml
MusicPlayer/: settings.py  urls.py
main/: admin.py  lyrics.py  models.py  serializers.py  urls.py  views.py
main/templates/: add_song.html  index.html
static/css/: style.css
static/js/: script.js
